--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "good": "^8.1.1",
+    "good-console": "^7.1.0",
     "hapi": "^17.8.1"
   }
 }
