--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "good": "^8.1.1",
     "good-console": "^7.1.0",
-    "hapi": "^17.8.1"
+    "hapi": "^17.8.1",
+    "joi": "^14.3.0",
+    "knex": "^0.15.2",
+    "mysql": "^2.16.0"
   }
 }
